--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<link href="css/style.css" rel="stylesheet">
 
 		<script>
+			var gaPlugin;
+			gaPlugin = window.plugins.gaPlugin;
+   			gaPlugin.init(successHandler, errorHandler, "UA-60026567-1", 10);
+		
 			function checkConnection() {
 				var networkState = navigator.network.connection.type;
 
