--- a/temps/signup.html
+++ b/temps/signup.html
@@ -8,15 +8,15 @@
 	<div class="list list-inset">
 		<form id="form-signup" role="form" autocomplete="off" style="padding: 15px 15px" >
 			<label class="item item-input">
-				<input name="vezeteknev" type="text" placeholder="Firstname">
+				<input id="vezeteknev" name="vezeteknev" type="text" placeholder="Firstname">
 			</label>
-			<span class="help-block" ng-show="errorVezeteknev">{{ errorVezeteknev}}</span>
+			<span class="help-block" ng-show="errorVezeteknev" >{{ errorVezeteknev}}</span>
 			<label class="item item-input">
-				<input name="keresztnev" type="text" placeholder="Lastname">
+				<input id="keresztnev" name="keresztnev" type="text" placeholder="Lastname">
 			</label>
 			<span class="help-block" ng-show="errorKeresztnev">{{ errorKeresztnev}}</span>
 			<label class="item item-input">
-				<input name="email" type="email" placeholder="Email">
+				<input id="email" name="email" type="email" placeholder="Email">
 			</label>
 			<span class="help-block" ng-show="errorEmail">{{ errorEmail}}</span>
 			<label class="item item-input">
