--- a/temps/home.html
+++ b/temps/home.html
@@ -90,10 +90,11 @@
 				<button style="color: white" class="button button-icon icon ion-gear-a" ng-click="menuRight()"></button>
 			</div>
 		</ion-header-bar>
-		<img  style="display: block;width: 100%" id="hatter" src="css/background-home.jpg" />
-		<div class="banner" style="top: 44px;position: absolute;text-align: center;width: 100%">
+		<div ng-if="aktBanner.url != undefined" class="banner" style="text-align: center;margin-top  : 44px;width: 100%">
 			<img ng-click="openBanner(aktBanner.url)"  src="{{aktBanner.img}}" width="100%" />
 		</div>
+		<img  style="display: block;width: 100% ;margin: 0px" id="hatter" src="css/background-home.jpg" />
+		     
 
 
 		<div class="mainMenu" >
@@ -165,8 +166,7 @@
 
 			<ion-toggle class="item item-icon-left" ng-model="saveImages" ng-checked="saveImages" ng-change="saveImageHandler(saveImages)" toggle-class="toggle-assertive">
 				<i class="icon ion-images"></i>
-				Pictures for the device.
-
+				Save to gallery
 			</ion-toggle>
 			<a class="item item-icon-left" data-ng-click="logout()"> <i class="icon ion-log-out"></i> Log Out </a>
 			<a class="item item-icon-left" data-ng-click="exit()"> <i class="icon ion-android-exit"></i> Exit </a>
